--- a/ICDE0828.ipynb
+++ b/ICDE0828.ipynb
@@ -587,7 +587,7 @@
     "    print(f\"new_table cost time:{time.time()-t}\")\n",
     "    return yxl_table\n",
     "\n",
-    "def update_node_influence1(G,seed_set,yxl_table,new_forward_label):#需要再好好考虑具体计算影响力增益算法\n",
+    "def m1(G,k,yxl_table,new_forward_label,node_list):#需要再好好考虑具体计算影响力增益算法\n",
     "    def get_activation_probabilities(graph, seed_set):\n",
     "\n",
     "        # 步骤 1: 找到所有不属于S的一跳邻居\n",
@@ -610,7 +610,7 @@
     "                # 检查是否存在从 s_node到neighbor的边\n",
     "                if graph.has_edge(s_node, neighbor):\n",
     "                    # 获取边的激活概率，如果不存在'probability'属性，则默认为0\n",
-    "                    edge_prob = graph[s_node][neighbor].get('weight', 0.0)\n",
+    "                    edge_prob = graph.get_edge_data(s_node,neighbor)['weight']\n",
     "                    prob_not_activated *= (1 - edge_prob)\n",
     "                \n",
     "            # 总的激活概率 = 1 - (所有相关边都不激活的概率)\n",
@@ -618,27 +618,74 @@
     "            activation_probs[neighbor] = total_activation_prob\n",
     "            \n",
     "        return activation_probs\n",
-    "    indexnode=set()\n",
-    "    for seedNode in seed_set:\n",
-    "        if seedNode in new_forward_label.keys():indexnode.update(seedNode)\n",
-    "    others=set(seed_set)-indexnode\n",
-    "    activation_probs=get_activation_probabilities(G,others)\n",
-    "\n",
-    "    tuple_list=[]\n",
-    "    p=1\n",
-    "    temp=0\n",
-    "    for node in indexnode:\n",
-    "        tuple_list.append((1,yxl_table[nbr]))\n",
-    "    for nbr in activation_probs.keys(): # 得到当前节点的邻居节点\n",
-    "        value = activation_probs[nbr]\n",
-    "        tuple_list.append((value,value*yxl_table[nbr]))\n",
-    "    # 根据value*yxl_table[nbr]进行排序\n",
-    "    tuple_list.sort(key=lambda t: t[1], reverse=True)\n",
     "    \n",
-    "    for t in tuple_list:\n",
-    "        temp+=t[1]*p\n",
-    "        p=p*(1-t[0])\n",
-    "    return temp\n",
+    "    def change_activation_probs(graph,activation_probs,node):\n",
+    "        if node in new_forward_label.keys():\n",
+    "            print(f\"{node} is index node\")\n",
+    "            return activation_probs\n",
+    "        else:\n",
+    "            one_hop_neighbors = set()\n",
+    "            one_hop_neighbors.update(graph.neighbors(node))\n",
+    "            for neighbor in one_hop_neighbors:\n",
+    "                if neighbor in activation_probs.keys():\n",
+    "                    edge_prob = graph.get_edge_data(node,neighbor)['weight']\n",
+    "                    activation_probs[neighbor]=1-(1-activation_probs[neighbor])(1-edge_prob)\n",
+    "                else:\n",
+    "                    edge_prob = graph.get_edge_data(node,neighbor)['weight']\n",
+    "                    activation_probs[neighbor] = edge_prob\n",
+    "        return activation_probs\n",
+    "    def update_node_influence1(G,seed_set,new_forward_label,activation_probs):\n",
+    "        indexnode=set()\n",
+    "        for seedNode in seed_set:\n",
+    "            if seedNode in new_forward_label.keys():indexnode.update(seedNode)\n",
+    "        others=set(seed_set)-indexnode\n",
+    "        # activation_probs=get_activation_probabilities(G,others)\n",
+    "        tuple_list=[]\n",
+    "        p=1\n",
+    "        temp=0\n",
+    "        for node in indexnode:\n",
+    "            tuple_list.append((1,yxl_table[nbr]))\n",
+    "        for nbr in activation_probs.keys(): # 得到当前节点的邻居节点\n",
+    "            value = activation_probs[nbr]\n",
+    "            tuple_list.append((value,value*yxl_table[nbr]))\n",
+    "        # 根据value*yxl_table[nbr]进行排序\n",
+    "        tuple_list.sort(key=lambda t: t[1], reverse=True)\n",
+    "        \n",
+    "        for t in tuple_list:\n",
+    "            temp+=t[1]*p\n",
+    "            p=p*(1-t[0])\n",
+    "        return temp\n",
+    "    \n",
+    "    seeds=[]\n",
+    "    activation_probs={}\n",
+    "    node_set=set(node_list)-set(seeds)\n",
+    "    indexnode=set()\n",
+    "    tuple_list=[]\n",
+    "    for node in node_set:\n",
+    "        seed_set=seeds\n",
+    "        seed_set.append(node)\n",
+    "        indexnode_set=indexnode\n",
+    "        if node in new_forward_label.keys():\n",
+    "            tuple_list.append((1,yxl_table[nbr])) \n",
+    "        else: activation_probs_new=change_activation_probs(G,activation_probs,node)\n",
+    "        \n",
+    "        tuple_list=[]\n",
+    "        p=1\n",
+    "        temp=0\n",
+    "        for node in indexnode:\n",
+    "            tuple_list.append((1,yxl_table[nbr]))\n",
+    "        for nbr in activation_probs.keys(): # 得到当前节点的邻居节点\n",
+    "            value = activation_probs[nbr]\n",
+    "            tuple_list.append((value,value*yxl_table[nbr]))\n",
+    "        # 根据value*yxl_table[nbr]进行排序\n",
+    "        tuple_list.sort(key=lambda t: t[1], reverse=True)\n",
+    "        \n",
+    "        for t in tuple_list:\n",
+    "            temp+=t[1]*p\n",
+    "            p=p*(1-t[0])\n",
+    "\n",
+    "    \n",
+    "\n",
     "\n",
     "def update_node_influence2(G,node,pruned,new_forward_label):#用剪枝表继续计算影响力\n",
     "    if node in new_forward_label.keys():\n",
