--- a/ICDE0828.ipynb
+++ b/ICDE0828.ipynb
@@ -588,36 +588,36 @@
     "    return yxl_table\n",
     "\n",
     "def m1(G,k,yxl_table,new_forward_label,node_list):#需要再好好考虑具体计算影响力增益算法\n",
-    "    def get_activation_probabilities(graph, seed_set):\n",
+    "    # def get_activation_probabilities(graph, seed_set):\n",
     "\n",
-    "        # 步骤 1: 找到所有不属于S的一跳邻居\n",
-    "        one_hop_neighbors = set()\n",
-    "        for node in seed_set:\n",
-    "            # graph.neighbors(node) 可以获取所有邻居（对于有向图和无向图都适用）\n",
-    "            one_hop_neighbors.update(graph.neighbors(node))\n",
+    "    #     # 步骤 1: 找到所有不属于S的一跳邻居\n",
+    "    #     one_hop_neighbors = set()\n",
+    "    #     for node in seed_set:\n",
+    "    #         # graph.neighbors(node) 可以获取所有邻居（对于有向图和无向图都适用）\n",
+    "    #         one_hop_neighbors.update(graph.neighbors(node))\n",
     "        \n",
-    "        # 从邻居集合中排除种子集自身\n",
-    "        one_hop_neighbors -= seed_set\n",
+    "    #     # 从邻居集合中排除种子集自身\n",
+    "    #     one_hop_neighbors -= seed_set\n",
     "\n",
-    "        # 步骤 2: 为每个邻居计算被激活的总概率\n",
-    "        activation_probs = {}\n",
-    "        for neighbor in one_hop_neighbors:\n",
-    "            # 对于每个邻居，计算所有从S到它的边都不激活的概率\n",
-    "            prob_not_activated = 1.0\n",
+    "    #     # 步骤 2: 为每个邻居计算被激活的总概率\n",
+    "    #     activation_probs = {}\n",
+    "    #     for neighbor in one_hop_neighbors:\n",
+    "    #         # 对于每个邻居，计算所有从S到它的边都不激活的概率\n",
+    "    #         prob_not_activated = 1.0\n",
     "            \n",
-    "            # 遍历种子集，查找连接到当前邻居的边\n",
-    "            for s_node in seed_set:\n",
-    "                # 检查是否存在从 s_node到neighbor的边\n",
-    "                if graph.has_edge(s_node, neighbor):\n",
-    "                    # 获取边的激活概率，如果不存在'probability'属性，则默认为0\n",
-    "                    edge_prob = graph.get_edge_data(s_node,neighbor)['weight']\n",
-    "                    prob_not_activated *= (1 - edge_prob)\n",
+    "    #         # 遍历种子集，查找连接到当前邻居的边\n",
+    "    #         for s_node in seed_set:\n",
+    "    #             # 检查是否存在从 s_node到neighbor的边\n",
+    "    #             if graph.has_edge(s_node, neighbor):\n",
+    "    #                 # 获取边的激活概率，如果不存在'probability'属性，则默认为0\n",
+    "    #                 edge_prob = graph.get_edge_data(s_node,neighbor)['weight']\n",
+    "    #                 prob_not_activated *= (1 - edge_prob)\n",
     "                \n",
-    "            # 总的激活概率 = 1 - (所有相关边都不激活的概率)\n",
-    "            total_activation_prob = 1 - prob_not_activated\n",
-    "            activation_probs[neighbor] = total_activation_prob\n",
+    "    #         # 总的激活概率 = 1 - (所有相关边都不激活的概率)\n",
+    "    #         total_activation_prob = 1 - prob_not_activated\n",
+    "    #         activation_probs[neighbor] = total_activation_prob\n",
     "            \n",
-    "        return activation_probs\n",
+    "    #     return activation_probs\n",
     "    \n",
     "    def change_activation_probs(graph,activation_probs,node):\n",
     "        if node in new_forward_label.keys():\n",
@@ -684,8 +684,6 @@
     "            temp+=t[1]*p\n",
     "            p=p*(1-t[0])\n",
     "\n",
-    "    \n",
-    "\n",
     "\n",
     "def update_node_influence2(G,node,pruned,new_forward_label):#用剪枝表继续计算影响力\n",
     "    if node in new_forward_label.keys():\n",
@@ -699,6 +697,186 @@
     "            else:\n",
     "                temp+=value\n",
     "    return temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15af70de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def m1(G, k, yxl_table, new_forward_label, node_list):\n",
+    "    \"\"\"\n",
+    "    使用贪心算法从图G中选择k个种子节点以最大化影响力。\n",
+    "\n",
+    "    参数:\n",
+    "        G (networkx.Graph): 代表社交网络的图。边应有一个 'weight' 属性，代表传播概率。\n",
+    "        k (int): 需要选择的种子节点的数量。\n",
+    "        yxl_table (dict): 一个字典，映射每个节点到其预先计算好的基础影响力值。\n",
+    "        new_forward_label (dict): 一个字典，用于识别特殊的“索引节点”(index node)。\n",
+    "        node_list (list): 可供选择的候选节点的列表。\n",
+    "\n",
+    "    返回:\n",
+    "        set: 包含k个被选中种子节点的集合。\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # --- 辅助函数1：更新激活概率 ---\n",
+    "    def change_activation_probs(graph, activation_probs, node):\n",
+    "        \"\"\"\n",
+    "        当一个新的节点被加入种子集时，更新激活概率。\n",
+    "        此函数计算新加入节点的邻居节点们的最新激活概率。\n",
+    "        \"\"\"\n",
+    "        # 如果新节点是一个“索引节点”，根据这个模型的逻辑，它的影响力通过别的方式计算，\n",
+    "        # 不会通过这个函数进一步传播。\n",
+    "        if node in new_forward_label:\n",
+    "            print(f\"节点 {node} 是一个索引节点，不通过此函数进行传播。\")\n",
+    "            return activation_probs\n",
+    "\n",
+    "        # 创建一个副本以避免在迭代时修改原始字典\n",
+    "        updated_probs = activation_probs.copy()\n",
+    "        \n",
+    "        # 获取新加入节点的所有邻居\n",
+    "        one_hop_neighbors = set(graph.neighbors(node))\n",
+    "        \n",
+    "        for neighbor in one_hop_neighbors:\n",
+    "            edge_prob = graph.get_edge_data(node, neighbor).get('weight', 0.0)\n",
+    "            \n",
+    "            # 激活概率的更新公式: P(A or B) = 1 - (1 - P(A)) * (1 - P(B))\n",
+    "            # 这里 P(A) 是邻居节点已有的激活概率。\n",
+    "            # P(B) 是从新节点 `node` 传播过来并激活该邻居的概率。\n",
+    "            if neighbor in updated_probs:\n",
+    "                updated_probs[neighbor] = 1 - (1 - updated_probs[neighbor]) * (1 - edge_prob)\n",
+    "            else:\n",
+    "                updated_probs[neighbor] = edge_prob\n",
+    "                \n",
+    "        return updated_probs\n",
+    "\n",
+    "    # --- 辅助函数2：计算总影响力 ---\n",
+    "    def update_node_influence1(graph, seed_set, new_forward_label, activation_probs, yxl_table):\n",
+    "        \"\"\"\n",
+    "        计算当前种子集合的估算影响力。\n",
+    "        \"\"\"\n",
+    "        indexnode = set()\n",
+    "        for seedNode in seed_set:\n",
+    "            if seedNode in new_forward_label:\n",
+    "                # 已修正: 使用 .add() 添加单个元素\n",
+    "                indexnode.add(seedNode)\n",
+    "        tuple_list = []\n",
+    "        \n",
+    "        # 对于种子集中的索引节点，它们的激活概率视为1\n",
+    "        for node in indexnode:\n",
+    "            # 已修正: 使用 'node' 替代未定义的 'nbr'\n",
+    "            if node in yxl_table:\n",
+    "                tuple_list.append((1, yxl_table[node]))\n",
+    "\n",
+    "        # 对于从非索引种子节点可达的其他节点\n",
+    "        for nbr, value in activation_probs.items():\n",
+    "            if nbr in yxl_table:\n",
+    "                # 元组的第一个元素是激活概率，第二个是期望收益\n",
+    "                tuple_list.append((value, value * yxl_table[nbr]))\n",
+    "        \n",
+    "        # 根据期望收益进行降序排序\n",
+    "        tuple_list.sort(key=lambda t: t[1], reverse=True)\n",
+    "        \n",
+    "        total_influence = 0\n",
+    "        p = 1.0 # p 代表排在前面的节点都没有成功激活目标的概率\n",
+    "        \n",
+    "        for t in tuple_list:\n",
+    "            prob_activation = t[0]\n",
+    "            # 从期望收益反推该节点本身的基础影响力值\n",
+    "            base_gain = t[1] / prob_activation if prob_activation > 0 else 0\n",
+    "            \n",
+    "            # 该节点对总影响力的贡献 = 基础影响力 * 激活它的概率 * 在它之前没有其他节点成功激活的概率\n",
+    "            total_influence += p * prob_activation * base_gain\n",
+    "            \n",
+    "            # 为下一次迭代更新 p\n",
+    "            p = p * (1 - prob_activation)\n",
+    "            \n",
+    "        return total_influence\n",
+    "\n",
+    "    # --- 贪心算法主逻辑 ---\n",
+    "    seed_set = set()\n",
+    "    \n",
+    "    # 这个字典存储从当前种子集到网络中所有其他节点的激活概率。\n",
+    "    # 它会在每一步被增量更新。\n",
+    "    current_activation_probs = {}\n",
+    "    \n",
+    "    # 我们可以从中选择的候选节点列表\n",
+    "    candidate_nodes = list(node_list)\n",
+    "\n",
+    "    print(f\"开始选择 {k} 个种子节点...\")\n",
+    "\n",
+    "    for i in range(k):\n",
+    "        max_marginal_gain = -1\n",
+    "        best_node_to_add = None\n",
+    "        \n",
+    "        # 计算在添加新节点之前，当前种子集的影响力\n",
+    "        current_influence = update_node_influence1(G, seed_set, new_forward_label, current_activation_probs, yxl_table)\n",
+    "\n",
+    "        # 遍历所有候选节点，找到能带来最大边际增益的那个\n",
+    "        for candidate_node in candidate_nodes:\n",
+    "            if candidate_node in seed_set:\n",
+    "                continue\n",
+    "\n",
+    "            # --- 计算如果加入这个候选节点，潜在的影响力会是多少 ---\n",
+    "            \n",
+    "            # 1. 创建一个临时的种子集\n",
+    "            temp_seed_set = seed_set | {candidate_node}\n",
+    "            \n",
+    "            # 2. 计算加入该节点后，网络整体的激活概率\n",
+    "            # 这是在当前激活概率的基础上，根据新节点带来的变化进行更新\n",
+    "            potential_new_probs = change_activation_probs(G, current_activation_probs, candidate_node)\n",
+    "\n",
+    "            # 3. 计算这个临时种子集的总影响力\n",
+    "            new_total_influence = update_node_influence1(G, temp_seed_set, new_forward_label, potential_new_probs, yxl_table)\n",
+    "\n",
+    "            # 4. 计算边际增益\n",
+    "            marginal_gain = new_total_influence - current_influence\n",
+    "\n",
+    "            # 5. 检查这个节点是否是本轮迭代中目前为止最好的选择\n",
+    "            if marginal_gain > max_marginal_gain:\n",
+    "                max_marginal_gain = marginal_gain\n",
+    "                best_node_to_add = candidate_node\n",
+    "\n",
+    "        # 在检查完所有候选节点后，将本轮最优的节点加入种子集\n",
+    "        if best_node_to_add is not None:\n",
+    "            seed_set.add(best_node_to_add)\n",
+    "            candidate_nodes.remove(best_node_to_add)\n",
+    "            \n",
+    "            # 关键步骤：永久性地更新激活概率，为下一次迭代做准备\n",
+    "            current_activation_probs = change_activation_probs(G, current_activation_probs, best_node_to_add)\n",
+    "            \n",
+    "            print(f\"第 {i+1}/{k} 轮: 添加节点 {best_node_to_add}，边际增益为 {max_marginal_gain:.4f}\")\n",
+    "        else:\n",
+    "            # 如果没有节点能带来正的增益，就提前结束\n",
+    "            print(\"找不到任何能带来正向边际增益的节点，提前停止。\")\n",
+    "            break\n",
+    "\n",
+    "    print(f\"\\n选择完成。最终的种子集合为: {seed_set}\")\n",
+    "    return seed_set\n",
+    "\n",
+    "def update_node_influence2(G,node,pruned,new_forward_label):#用剪枝表继续计算影响力\n",
+    "    if node in new_forward_label.keys():\n",
+    "        temp=pruned[node]\n",
+    "    else:\n",
+    "        temp=1\n",
+    "        for nbr in G.successors(node): # 得到当前节点的邻居节点\n",
+    "            value = G.get_edge_data(node,nbr)['weight']\n",
+    "            if nbr in pruned.keys():\n",
+    "                temp+=value*pruned[nbr]\n",
+    "            else:\n",
+    "                temp+=value\n",
+    "    return temp\n",
+    "\n",
+    "def m2(G,k,pruned,new_forward_label,node_list):\n",
+    "    node_influence=[]\n",
+    "    for node in node_list:\n",
+    "        influence = update_node_influence2(G,node,pruned,new_forward_label)\n",
+    "        node_influence.append((node,influence))\n",
+    "    node_influence.sort(key=lambda t: t[1], reverse=True)\n",
+    "    seed_set=[node_influence[i][0] for i in range(k)]\n",
+    "    return seed_set"
    ]
   },
   {
@@ -780,54 +958,14 @@
     "    # print('time:',time.time()-t1,'IMM influence:')\n",
     "    # pg_influence(newG,repeat,seed4)\n",
     "    t2=time.time()\n",
-    "    new_sorted_list=[]\n",
-    "    for i in range(k):\n",
-    "        node=sorted_list[i][0]\n",
-    "        yxl=update_node_influence(newG,node,new_forward_label)\n",
-    "        new_sorted_list.append((node,yxl))\n",
-    "    new_sorted_list = sorted(new_sorted_list, key=lambda x: x[1], reverse=True)\n",
-    "    temp=0\n",
-    "    for i in range(k,5*k):\n",
-    "        node=sorted_list[i][0]\n",
-    "        \n",
-    "        yxl=update_node_influence(newG,node,new_forward_label)\n",
-    "        if(yxl>new_sorted_list[k-1][1]):\n",
-    "            temp=0\n",
-    "            new_tuple=(node,yxl)\n",
-    "            new_sorted_list=insert_list(new_tuple,new_sorted_list,k)\n",
-    "        else:\n",
-    "            temp=temp+1\n",
-    "            if(temp>=k):\n",
-    "                print(i)\n",
-    "                break\n",
-    "    seed3=[item[0] for item in new_sorted_list[:k]]\n",
-    "    print('time:',time.time()-t2+tt1,'stop round:',i,'my method1 influence:')\n",
+    "    seed3=m1(newG,k,yxl_table,new_forward_label,node_list)\n",
+    "    print('time:',time.time()-t2+tt1+tt3,'my method1 influence:')\n",
     "    pg_influence(newG,repeat,seed3)\n",
     "    \n",
-    "    \n",
     "    t3=time.time()\n",
-    "    new_sorted_list=[]\n",
-    "    for i in range(k):\n",
-    "        node=sorted_list[i][0]\n",
-    "        yxl=update_node_influence2(newG,node,pruned,new_forward_label)\n",
-    "        new_sorted_list.append((node,yxl))\n",
-    "    new_sorted_list = sorted(new_sorted_list, key=lambda x: x[1], reverse=True)\n",
-    "\n",
-    "    temp=0\n",
-    "    for i in range(k,10*k):\n",
-    "        node=sorted_list[i][0]\n",
-    "        yxl=update_node_influence2(newG,node,pruned,new_forward_label)\n",
-    "        if(yxl>new_sorted_list[k-1][1]):\n",
-    "            temp=0\n",
-    "            new_tuple=(node,yxl)\n",
-    "            new_sorted_list=insert_list(new_tuple,new_sorted_list,k)\n",
-    "        else:\n",
-    "            temp=temp+1\n",
-    "            if(temp>=2*k):\n",
-    "                break\n",
-    "    seed3=[item[0] for item in new_sorted_list[:k]]\n",
-    "    print('time:',time.time()-t3+tt1+tt2,'stop round:',i,'my method2 influence:')\n",
-    "    pg_influence(newG,repeat,seed3)"
+    "    seed4=m2(newG,k,pruned,new_forward_label,node_list)\n",
+    "    print('time:',time.time()-t3+tt1+tt2,'my method2 influence:')\n",
+    "    pg_influence(newG,repeat,seed4)"
    ]
   }
  ],
